# imdb-series-ratings

./: Makefile  README.md  imdb-series-ratings.py  pyproject.toml
