[tool.poetry]
name = "imdb-series-ratings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "imdb_series_ratings"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
seaborn = "0.13.2"
numpy = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
